# yadro-computer-club

./: .clang-format  CMakeLists.txt  README.md  main.cpp
assets/: assignment.docx
src/: CMakeLists.txt  main.cpp  processor.cpp  processor.hpp  root.cpp  root.hpp  validation.cpp
src/events/: context.hpp  event.hpp  event_consumer.hpp  event_handler.cpp  event_handler.hpp  events.def  events.hpp  handle_events.cpp  handle_events.hpp  parsing.hpp  serializing.hpp
src/io/: parsing.cpp  parsing.hpp  serializing.cpp  serializing.hpp
src/io/utils/: time_converts.cpp  time_converts.hpp  times.cpp  times.hpp
src/registries/: accountant.cpp  accountant.hpp  client_registry.cpp  client_registry.hpp  table_registry.cpp  table_registry.hpp
src/validations/: validation.cpp  validation.hpp  validation_pipeline.cpp  validation_pipeline.hpp
src/validations/steps/: context_validation.cpp  context_validation.hpp  events_validation.cpp  events_validation.hpp  validate_content.hpp  validate_format.hpp
tests/: CMakeLists.txt  computer_club_tests.cpp  day_processing_tests.cpp  validation_tests.cpp
tests/static/: expected_output_2.txt  input_3.txt
tests/static/input/: 2.txt  correct.txt  event_id_out_of_range.txt  invalid_client_name.txt  invalid_event_body_1.txt  invalid_event_body_2.txt  invalid_event_body_3.txt  invalid_event_body_4.txt  table_id_out_of_range.txt  time_not_increasing.txt
tests/static/output/: 3.txt
tests/utils/: utils.hpp
