add_library(yadro_computer_club_lib
        io/utils/times.hpp
        validations/validation.cpp
        validations/validation.hpp
        io/utils/times.cpp
        events/event_handler.hpp
        events/event.hpp
        events/context.hpp
        registries/client_registry.hpp
        registries/client_registry.cpp
        registries/table_registry.hpp
        registries/table_registry.cpp
        registries/accountant.hpp
        registries/accountant.cpp
        io/parsing.hpp
        processor.hpp
        processor.cpp
        events/event_handler.cpp
        io/serializing.hpp
        io/parsing.cpp
        io/serializing.cpp
)
target_include_directories(yadro_computer_club_lib
        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
)